Exclude `math` for now: it's not ready

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ option( DXX_SELFTEST "Test the modules"                               OFF )
 option( DXX_DOXYGEN  "Generate docs with doxygen"                     OFF )
 
 option( DXX_WITH_HTTP "Include dxx.http module" OFF )
+option( DXX_WIHT_MATH "Include dxx.math module" OFF )
 
 if( DXX_SELFTEST )
     set( CMAKE_CXX_MODULE_STD ON )
@@ -62,7 +63,9 @@ fetch_module( errors   )
 if( DXX_WITH_HTTP )
 fetch_module( http     )
 endif()
+if( DXX_WITH_MATH )
 fetch_module( math     )
+endif()
 fetch_module( overload )
 fetch_module( selftest )
 fetch_module( utils    )
