cmake: pull CPM deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,25 @@ target_sources(
     FILES "${DXX_MATH_XX}"
 )
 target_compile_features( dot-xx-math PUBLIC cxx_std_23 )
+
+if( NOT DXX_NO_CPM )
+    CPMAddPackage(
+        NAME "dot-xx-assert"
+        GITHUB_REPOSITORY "gregthemadmonk/dxx"
+        GIT_TAG "assert"
+    )
+    CPMAddPackage(
+        NAME "dot-xx-cstd"
+        GITHUB_REPOSITORY "gregthemadmonk/dxx"
+        GIT_TAG "cstd"
+    )
+    CPMAddPackage(
+        NAME "dot-xx-utils"
+        GITHUB_REPOSITORY "gregthemadmonk/dxx"
+        GIT_TAG "utils"
+    )
+endif()
+
 target_link_libraries(
     dot-xx-math PRIVATE
     dot-xx::assert dot-xx::cstd dot-xx::utils
