cmake: fix repo address

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,22 +26,22 @@ target_compile_features( dot-xx-http PUBLIC cxx_std_23 )
 if( NOT DXX_NO_CPM )
     CPMAddPackage(
         NAME "dot-xx-assert"
-        GITHUB_REPOSITORY "gregthemadmonk/dxx"
+        GITHUB_REPOSITORY "gregthemadmonk/dot-xx"
         GIT_TAG "assert"
     )
     CPMAddPackage(
         NAME "dot-xx-cstd"
-        GITHUB_REPOSITORY "gregthemadmonk/dxx"
+        GITHUB_REPOSITORY "gregthemadmonk/dot-xx"
         GIT_TAG "cstd"
     )
     CPMAddPackage(
         NAME "dot-xx-errors"
-        GITHUB_REPOSITORY "gregthemadmonk/dxx"
+        GITHUB_REPOSITORY "gregthemadmonk/dot-xx"
         GIT_TAG "errors"
     )
     CPMAddPackage(
         NAME "dot-xx-overload"
-        GITHUB_REPOSITORY "gregthemadmonk/dxx"
+        GITHUB_REPOSITORY "gregthemadmonk/dot-xx"
         GIT_TAG "overload"
     )
 endif()
